<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>touch_mapper</name>
  <version>0.0.0</version>
  <description>Maps touch device pose to trajectory progress.</description>
  <maintainer email="beginner@todo.todo">beginner</maintainer>
  <license>Apache-2.0</license>

  <!-- 执行依赖：运行时需要的 ROS 2 包 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>omni_common</exec_depend>
  <!-- <exec_depend>geomagic_touch_msgs</exec_depend> -->

  <!-- 测试依赖 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>